init ad/ad
